[gd_scene load_steps=4 format=2]

[ext_resource path="res://Scenes/Disk.tscn" type="PackedScene" id=1]
[ext_resource path="res://Scenes/Peg.tscn" type="PackedScene" id=2]
[ext_resource path="res://Scripts/Root.gd" type="Script" id=3]

[node name="Root" type="Node2D"]
script = ExtResource( 3 )
disk_scene = ExtResource( 1 )

[node name="Background" type="ColorRect" parent="."]
margin_right = 1600.0
margin_bottom = 900.0
mouse_filter = 2
color = Color( 0.239216, 0.239216, 0.239216, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PegA" parent="." instance=ExtResource( 2 )]
position = Vector2( 400, 595 )

[node name="PegB" parent="." instance=ExtResource( 2 )]
position = Vector2( 800, 595 )

[node name="PegC" parent="." instance=ExtResource( 2 )]
position = Vector2( 1200, 602 )

[node name="LineEdit" type="LineEdit" parent="."]
margin_top = 847.0
margin_right = 1600.0
margin_bottom = 895.0
align = 1
placeholder_text = "Input in the form \"<disk sizes on peg A> | <disk sizes on peg B> | <disk sizes on peg C>\", e.g. The default configuration is \"3,2,1 | 5,4 | 6\". Press enter to commit"
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="text_entered" from="LineEdit" to="." method="_on_LineEdit_text_entered"]
